--- a/public/404.html
+++ b/public/404.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +23,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <h1>Oops!!! Page Not Found</h1>
         <div class="body">
             <p>Click the link below to go back to our Home Page</p>
@@ -28,7 +31,14 @@
         </div>
     </main>
     <footer>
-
+        <p>You can easily contact me by clicking on any of the Links below</p>
+        <div class="social-media">
+            <a href="https://twitter.com/Tolulophey" target="_blank"><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/64px-Twitter-logo.svg.png' alt="twitter" /></a>
+            <a href="https://web.facebook.com/amole.tolulopebukunmi/" target="_blank" ><img src='https://upload.wikimedia.org/wikipedia/commons/4/44/Facebook_Logo.png' alt="facebook" /></a>
+            <a href="https://www.linkedin.com/in/amole-tolulope-bukunmi/" target="_blank"><img src='https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg' alt="linkedin" /></a>
+            <a href="https://github.com/Tolulophey" target="_blank"><img src='https://tolulophey.github.io/Portfolio-Website-Template/images/GitHub1.png' alt="github" /></a>
+        </div>
+        <p>&copy; 2022 Tolulophey </p>
     </footer>
 </body>
 </html>
