--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,11 +23,34 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>My Home Page</h1>
+    <main class="main">
+        <div>
+            <h1>Home Page</h1>
+            <p>Welcome to my website</p>
+        </div>
+        <div class="bio">
+            <div class="left-column">
+                <img src="https://tolulophey.github.io/Portfolio-Website-Template/images/mypicture.jpg" alt="logo" class="mypicture">
+                <p>AMOLE Tolulope Bukunmi</p>
+                <p>Full-Stack Web Developer</p>
+            </div>
+            <div class="right-column">
+                <p>I'm a Full-Stack Web Developer that is very vast in Website Development. I can design all sort of website which includes landing page, ecommerce website, product page among others.</p>
+                <p>Top Quality delivery is guaranteed</p>        
+            </div>
+        </div>
+            
+        </div>
     </main>
     <footer>
-        
+        <p>You can easily contact me by clicking on any of the Links below</p>
+        <div class="social-media">
+            <a href="https://twitter.com/Tolulophey" target="_blank"><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/64px-Twitter-logo.svg.png' alt="twitter" /></a>
+            <a href="https://web.facebook.com/amole.tolulopebukunmi/" target="_blank" ><img src='https://upload.wikimedia.org/wikipedia/commons/4/44/Facebook_Logo.png' alt="facebook" /></a>
+            <a href="https://www.linkedin.com/in/amole-tolulope-bukunmi/" target="_blank"><img src='https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg' alt="linkedin" /></a>
+            <a href="https://github.com/Tolulophey" target="_blank"><img src='https://tolulophey.github.io/Portfolio-Website-Template/images/GitHub1.png' alt="github" /></a>
+        </div>
+        <p>&copy; 2022 Tolulophey </p>
     </footer>
 </body>
 </html>
