--- a/public/contact.html
+++ b/public/contact.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,11 +23,49 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>My Contact Page</h1>
+    <main class="main">
+        <div>
+            <h1>Contact Us</h1>
+            <p>We are here to answer questions you may have about our services. Reach out to us and we will respond as soon  as we can.</p>
+        </div>
+        <div class="row">
+            <form class="left">
+                <label for="name">Full Name</label><br/>
+                <input type="text" id="name" placeholder='Your Full Name'/><br/>
+                <label for="email">Email</label><br/>
+                <input type="email" id="name" placeholder='Your E-mail'/><br/>
+                <label for="message">Message</label>
+                <textarea id="message" name="message" placeholder='Your Message'></textarea><br/>
+                
+                <input type='submit' value="Send" />
+            </form>
+            <div class='right'>
+                <p>E-MAIL</p>
+                <p class="gray">amoletolulope@gmail.com</p>
+                <p >TELEPHONE</p>
+                <p class="gray">+2348063673201</p>
+                <p>ADDRESS</p>
+                <p class="gray">Ile-Ife, Osun-State, Nigeria.</p>
+                <div class="media">
+                    <p>SOCIAL MEDIA</p>
+                    <div class="social-media">
+                        <a href="https://twitter.com/Tolulophey" target="_blank"><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/64px-Twitter-logo.svg.png' alt="twitter" /></a>
+                        <a href="https://web.facebook.com/amole.tolulopebukunmi/" target="_blank" ><img src='https://upload.wikimedia.org/wikipedia/commons/4/44/Facebook_Logo.png' alt="facebook" /></a>
+                        <a href="https://www.linkedin.com/in/amole-tolulope-bukunmi/" target="_blank"><img src='https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg' alt="linkedin" /></a>
+                    </div>
+                </div>
+            </div>
+        </div> 
     </main>
     <footer>
-
+        <p>You can easily contact me by clicking on any of the Links below</p>
+        <div class="social-media">
+            <a href="https://twitter.com/Tolulophey" target="_blank"><img src='https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Twitter-logo.svg/64px-Twitter-logo.svg.png' alt="twitter" /></a>
+            <a href="https://web.facebook.com/amole.tolulopebukunmi/" target="_blank" ><img src='https://upload.wikimedia.org/wikipedia/commons/4/44/Facebook_Logo.png' alt="facebook" /></a>
+            <a href="https://www.linkedin.com/in/amole-tolulope-bukunmi/" target="_blank"><img src='https://upload.wikimedia.org/wikipedia/commons/8/81/LinkedIn_icon.svg' alt="linkedin" /></a>
+            <a href="https://github.com/Tolulophey" target="_blank"><img src='https://tolulophey.github.io/Portfolio-Website-Template/images/GitHub1.png' alt="github" /></a>
+        </div>
+        <p>&copy; 2022 Tolulophey </p>
     </footer>
 </body>
 </html>
